assets/css/style.css
/*Reset*/
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

/*Utility riutilizzabili*/

.colonna-20 {
  width: 20%;
}

.colonna-60 {
  width: 60%;

}

.colonna-65 {
  width: 65%;
}

.colonna-35 {
  width: 35%;
}

.colonna-15 {
  width: 15%;
}

.colonna-40 {
  width: 40%;
}

.width-800 {
  width: 1200px;

}

.width-600 {
  width: 700px;
}

.height {
  height: 100px;
}

.bordo-dotter {
  border: 2px dotted black;
}

.text-right {
  text-align: right;
}

.text-left {
  text-align: left;

}

.padding5 {
  padding: 10px
}

.align-center {
  display: flex;
  align-items: center;
  justify-content: center;
}

/*Header*/

header {
  background-color: #ADD8E7;
  height: 70px;
  text-align: center;
  display: flex;
  background-color: #3260E0;


}

.header-info {
  background-color: #3260E0;
  display: flex;
  justify-content: space-between;
  align-items: center;
  color: white;
  font-size: 18px;

}

ul,
li,
a {
  display: inline-block;
  text-decoration: none;
  margin: 0 8px;
  color: white;
}

.accedi-button {
  background-color: white;
  color: black;
  padding: 12px;
  border-radius: 25px;
}

/* main */


.box-1 {
  height: 400px;
  width: 100%;
  display: flex;
  background-image: url('/assets/img/jumbo.png');
  background-size: cover;

}

.box-2 {
  height: 600px;
  width: 100%;
}

.box-3 {
  height: 550px;

}

.hero {
  background-color: transparent;
  height: 300px;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  color: white;


}

.hero-title {
  margin-bottom: 20px;
  font-size: 3.5rem;

}

.hero-description {
  text-align: center;
  margin: 20px;
  font-size: 18px;
}

.call-to-actions {
  margin: 20px;
}

.cta-action {
  margin-top: 50px;
  padding: 15px 20px;
  border-radius: 30px;
  font-size: 20px;
}

.bgc-white {
  background-color: white;
  color: black;
}

.bgc-black {
  background-color: black;
  color: white;
}

.bgc-lightblue {
  background-color: #8FA3E1;
  color: white;
  padding: 15px 30px;
  font-size: 25px;
  margin: 0 auto;
  text-align: center;
}

.action-botton {
  margin-top: 45px;
  display: flex;
  justify-content: center;
}

.box-4 {
  height: 1000px;
}


.big-box {
  height: 800px;
  background-color: green;
}


main h3 {
  font-size: 4rem;
  text-align: left;
}

main p {
  margin-top: 10px;
  font-size: 1.5rem;
  text-align: left;
}

.box-4 h3 {
  font-size: 3rem;
  text-align: center;
}

.box-4 p {
  text-align: center;
}

.big-box img {
  display: block;
  margin: 0 auto;
}

.stars {
  margin: 0 auto;
  text-align: center;
  width: 600px;
  height: 55px;
  margin-bottom: 20px;
  font-size: 2rem;
  background-image: url('/assets/img/stars.svg');
  background-size: cover;
  background-repeat: no-repeat;
  line-height: 120px;
}



/* Colori background*/

.bg-transparent {
  background-color: transparent;
}

.bg-blu {
  background-color: #00018B;
}

.bg-white {
  background-color: white;
}

.bg-azzurro {
  background-color: #1D90FF;
}

.bg-pink {
  background-color: #FFC1CA;
}

.bg-gray {
  background-color: #D3D3D3;
}

.bg-black {
  background-color: black;
}

.bg-chocolate {
  background-color: chocolate;
}

.bg-lightblue {
  background-color: #22B3AA;
}

/*footer*/

hr {
  border: 1px solid gray;
}

.footer-buttom {
  background-color: black;
  display: flex;
  align-items: flex-end;
  justify-content: center;
  padding-top: 20px;
}

.footer-menu {
  height: 80px;
  background-color: transparent;
  justify-content: space-between;

}

.footer-info {
  background-color: transparent;
}

footer h5 {
  font-size: 4rem;
  color: #788DDF;
  margin-bottom: 30px;
}

footer img {
  height: 25px;
}

footer .lingua {
  font-size: 25px;
  color: white;
}

.icone-social {
  font-size: 25px;
  color: white;


}

.icone-social i {
  margin-top: 30px;
  margin-left: 0;
  margin-right: 25px;
}

.title {
  color: #788DDF;
}

footer ul li {
  font-size: 22px;
  margin-top: 15px;
}

.button-registrati {
  color: white;
  background-color: #788DDF;
  padding: 10px 15px;
  border-radius: 30px;
}

